--- a/cloudpebble/root/templates/common/base.html
+++ b/cloudpebble/root/templates/common/base.html
@@ -26,7 +26,7 @@
         <script src="{% static 'ide/js/whats_new.js' %}"></script>
         <script src="{% static 'common/js/ajax.js' %}"></script>
         <script src="{% static 'bluebird/js/browser/bluebird.js' %}"></script>
-        <script>
+        <!-- <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -35,7 +35,7 @@
             ga('create', 'UA-40328830-1', 'cloudpebble.net');
             ga('send', 'pageview');
 
-        </script>
+        </script> -->
         <div id="whats-new" class="modal hide fade" tabindex="-1" role="dialog">
             <div class="modal-header">
                 {# Translators: Modal prompt header #}
