--- a/cloudpebble/ide/templates/ide/project.html
+++ b/cloudpebble/ide/templates/ide/project.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 {% load i18n %}
 
+{% load pipeline %}
 {% block title %}CloudPebble – {{ project.name }}{% endblock %}
 
 {% block head %}
