--- a/cloudpebble/root/templates/common/base.html
+++ b/cloudpebble/root/templates/common/base.html
@@ -1,12 +1,14 @@
 {% load staticfiles %}
-{% load pipeline %}
 {% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <title>{% block title %}CloudPebble{% endblock %}</title>
-        {% stylesheet 'base' %}
+        <link rel="stylesheet" type="text/css" href="{% static 'common/fonts/fonts.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'common/css/progress.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'common/css/common.css' %}">
+        <link rel="stylesheet" href="{% static 'ide/css/base.css' %}">
         <link rel="icon" href="{% static 'ide/img/favicon.png' %}" />
         <!--[if IE]>
           <link rel="Shortcut Icon" href="{% static 'ide/img/favicon.ico' %}" />
@@ -17,9 +19,14 @@
         <div class="main-container">
             {% block content %}{% endblock %}
         </div>
-        {% javascript 'base' %}
-
-        <!-- script>
+        <script src="{% static 'jquery/dist/jquery.min.js' %}"></script>
+        <script src="{% static 'common/js/modal.js' %}"></script>
+        <script src="{% static 'underscore/underscore-min.js' %}"></script>
+        <script src="{% static 'backbone/backbone-min.js' %}"></script>
+        <script src="{% static 'ide/js/whats_new.js' %}"></script>
+        <script src="{% static 'common/js/ajax.js' %}"></script>
+        <script src="{% static 'bluebird/js/browser/bluebird.js' %}"></script>
+        <!-- <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
