--- a/cloudpebble/ide/templates/ide/project.html
+++ b/cloudpebble/ide/templates/ide/project.html
@@ -12,6 +12,10 @@
 <link rel="stylesheet" href="{% static 'CodeMirror/theme/eclipse.css' %}">
 <link rel="stylesheet" href="{% static 'CodeMirror/theme/blackboard.css' %}">
 <link rel="stylesheet" href="{% static 'CodeMirror/theme/solarized.css' %}">
+<link rel="stylesheet" href="{% static 'CodeMirror/theme/tomorrow-night-eighties.css' %}">
+<link rel="stylesheet" href="{% static 'CodeMirror/theme/xq-dark.css' %}">
+<link rel="stylesheet" href="{% static 'CodeMirror/theme/3024-night.css' %}">
+<link rel="stylesheet" href="{% static 'CodeMirror/theme/midnight.css' %}">
 <link rel="stylesheet" href="{% static 'CodeMirror/addon/fold/foldgutter.css' %}">
 {% if font_css %}
 <link rel="stylesheet" href="{{ font_css }}" />
