--- a/cloudpebble/ide/templates/ide/project.html
+++ b/cloudpebble/ide/templates/ide/project.html
@@ -5,18 +5,18 @@
 {% block title %}CloudPebble – {{ project.name }}{% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="{% static 'CodeMirror/addon/hint/show-hint.css' %}">
-<link rel="stylesheet" href="{% static 'CodeMirror/addon/dialog/dialog.css' %}">
-<link rel="stylesheet" href="{% static 'CodeMirror/lib/codemirror.css' %}">
-<link rel="stylesheet" href="{% static 'CodeMirror/theme/monokai.css' %}">
-<link rel="stylesheet" href="{% static 'CodeMirror/theme/eclipse.css' %}">
-<link rel="stylesheet" href="{% static 'CodeMirror/theme/blackboard.css' %}">
-<link rel="stylesheet" href="{% static 'CodeMirror/theme/solarized.css' %}">
-<link rel="stylesheet" href="{% static 'CodeMirror/theme/tomorrow-night-eighties.css' %}">
-<link rel="stylesheet" href="{% static 'CodeMirror/theme/xq-dark.css' %}">
-<link rel="stylesheet" href="{% static 'CodeMirror/theme/3024-night.css' %}">
-<link rel="stylesheet" href="{% static 'CodeMirror/theme/midnight.css' %}">
-<link rel="stylesheet" href="{% static 'CodeMirror/addon/fold/foldgutter.css' %}">
+<link rel="stylesheet" href="{% static 'codemirror/addon/hint/show-hint.css' %}">
+<link rel="stylesheet" href="{% static 'codemirror/addon/dialog/dialog.css' %}">
+<link rel="stylesheet" href="{% static 'codemirror/lib/codemirror.css' %}">
+<link rel="stylesheet" href="{% static 'codemirror/theme/monokai.css' %}">
+<link rel="stylesheet" href="{% static 'codemirror/theme/eclipse.css' %}">
+<link rel="stylesheet" href="{% static 'codemirror/theme/blackboard.css' %}">
+<link rel="stylesheet" href="{% static 'codemirror/theme/solarized.css' %}">
+<link rel="stylesheet" href="{% static 'codemirror/theme/tomorrow-night-eighties.css' %}">
+<link rel="stylesheet" href="{% static 'codemirror/theme/xq-dark.css' %}">
+<link rel="stylesheet" href="{% static 'codemirror/theme/3024-night.css' %}">
+<link rel="stylesheet" href="{% static 'codemirror/theme/midnight.css' %}">
+<link rel="stylesheet" href="{% static 'codemirror/addon/fold/foldgutter.css' %}">
 {% if font_css %}
 <link rel="stylesheet" href="{{ font_css }}" />
 {% endif %}
@@ -558,23 +558,23 @@ var REGEXES = _.mapObject(JSON.parse('{{regexes_json|escapejs}}'), function(v) {
 
 </script>
 
-<script src="{% static 'CodeMirror/lib/codemirror.js' %}"></script>
-<script src="{% static 'CodeMirror/addon/dialog/dialog.js' %}"></script>
-<script src="{% static 'CodeMirror/addon/search/searchcursor.js' %}"></script>
-<script src="{% static 'CodeMirror/addon/search/search.js' %}"></script>
-<script src="{% static 'CodeMirror/addon/edit/matchbrackets.js' %}"></script>
-<script src="{% static 'CodeMirror/addon/edit/closebrackets.js' %}"></script>
-<script src="{% static 'CodeMirror/addon/comment/comment.js' %}"></script>
-<script src="{% static 'CodeMirror/addon/fold/foldgutter.js' %}"></script>
-<script src="{% static 'CodeMirror/addon/fold/foldcode.js' %}"></script>
-<script src="{% static 'CodeMirror/addon/fold/brace-fold.js' %}"></script>
-<script src="{% static 'CodeMirror/addon/fold/comment-fold.js' %}"></script>
+<script src="{% static 'codemirror/lib/codemirror.js' %}"></script>
+<script src="{% static 'codemirror/addon/dialog/dialog.js' %}"></script>
+<script src="{% static 'codemirror/addon/search/searchcursor.js' %}"></script>
+<script src="{% static 'codemirror/addon/search/search.js' %}"></script>
+<script src="{% static 'codemirror/addon/edit/matchbrackets.js' %}"></script>
+<script src="{% static 'codemirror/addon/edit/closebrackets.js' %}"></script>
+<script src="{% static 'codemirror/addon/comment/comment.js' %}"></script>
+<script src="{% static 'codemirror/addon/fold/foldgutter.js' %}"></script>
+<script src="{% static 'codemirror/addon/fold/foldcode.js' %}"></script>
+<script src="{% static 'codemirror/addon/fold/brace-fold.js' %}"></script>
+<script src="{% static 'codemirror/addon/fold/comment-fold.js' %}"></script>
 <script src="{% static 'ide/external/codemirror.hint.js' %}"></script>
 <script src="{% static 'fuse.js/src/fuse.js' %}"></script>
-<script src="{% static 'CodeMirror/mode/clike/clike.js' %}"></script>
-<script src="{% static 'CodeMirror/mode/javascript/javascript.js' %}"></script>
-<script src="{% static 'CodeMirror/keymap/emacs.js' %}"></script>
-<script src="{% static 'CodeMirror/keymap/vim.js' %}"></script>
+<script src="{% static 'codemirror/mode/clike/clike.js' %}"></script>
+<script src="{% static 'codemirror/mode/javascript/javascript.js' %}"></script>
+<script src="{% static 'codemirror/keymap/emacs.js' %}"></script>
+<script src="{% static 'codemirror/keymap/vim.js' %}"></script>
 <script src="{% static 'ide/external/uuid.js' %}"></script>
 <script src="/ide/jsi18n/"></script>
 <script src="{% static 'ide/js/json_parse.js' %}" type="text/javascript"></script>
