--- a/cloudpebble/ide/templates/ide/project.html
+++ b/cloudpebble/ide/templates/ide/project.html
@@ -6,6 +6,7 @@
 
 {% block head %}
 <link rel="stylesheet" href="{% static 'codemirror/addon/hint/show-hint.css' %}">
+<link rel="stylesheet" href="{% static 'codemirror/addon/lint/lint.css' %}">
 <link rel="stylesheet" href="{% static 'codemirror/addon/dialog/dialog.css' %}">
 <link rel="stylesheet" href="{% static 'codemirror/lib/codemirror.css' %}">
 <link rel="stylesheet" href="{% static 'codemirror/theme/monokai.css' %}">
@@ -17,6 +18,12 @@
 <link rel="stylesheet" href="{% static 'codemirror/theme/3024-night.css' %}">
 <link rel="stylesheet" href="{% static 'codemirror/theme/midnight.css' %}">
 <link rel="stylesheet" href="{% static 'codemirror/addon/fold/foldgutter.css' %}">
+
+<link rel="stylesheet" href="{% static 'codemirror/addon/fold/foldgutter.css' %}">
+<link rel="stylesheet" href="{% static 'codemirror/addon/fold/foldgutter.css' %}">
+<link rel="stylesheet" href="{% static 'codemirror/addon/fold/foldgutter.css' %}">
+<link rel="stylesheet" href="{% static 'codemirror/addon/fold/foldgutter.css' %}">
+
 {% if font_css %}
 <link rel="stylesheet" href="{{ font_css }}" />
 {% endif %}
@@ -569,11 +576,20 @@ var REGEXES = _.mapObject(JSON.parse('{{regexes_json|escapejs}}'), function(v) {
 <script src="{% static 'codemirror/addon/fold/foldcode.js' %}"></script>
 <script src="{% static 'codemirror/addon/fold/brace-fold.js' %}"></script>
 <script src="{% static 'codemirror/addon/fold/comment-fold.js' %}"></script>
+<script src="{% static 'codemirror/addon/display/autorefresh.js' %}"></script>
+<script src="{% static 'codemirror/addon/edit/trailingspace.js' %}"></script>
+<script src="{% static 'codemirror/addon/hint/javascript-hint.js' %}"></script>
+<script src="{% static 'codemirror/addon/lint/javascript-lint.js' %}"></script>
+<script src="{% static 'codemirror/addon/lint/lint.js' %}"></script>
+<script src="{% static 'codemirror/addon/scroll/annotatescrollbar.js' %}"></script>
+<script src="{% static 'codemirror/addon/search/jump-to-line.js' %}"></script>
+<script src="{% static 'codemirror/addon/wrap/hardwrap.js' %}"></script>
 <script src="{% static 'ide/external/codemirror.hint.js' %}"></script>
 <script src="{% static 'fuse.js/src/fuse.js' %}"></script>
 <script src="{% static 'codemirror/mode/clike/clike.js' %}"></script>
 <script src="{% static 'codemirror/mode/javascript/javascript.js' %}"></script>
 <script src="{% static 'codemirror/keymap/emacs.js' %}"></script>
+<script src="{% static 'codemirror/keymap/sublime.js' %}"></script>
 <script src="{% static 'codemirror/keymap/vim.js' %}"></script>
 <script src="{% static 'ide/external/uuid.js' %}"></script>
 <script src="/ide/jsi18n/"></script>
